[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openaudit"
version = "1.0.0"
description = "AI Ecosystem Trust & Quality Auditing Environment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Kiran Sindagi", email = "kiransindagi@example.com"}
]
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "app.pillars*"]

[tool.setuptools.package-data]
app = ["**/*.json", "**/*.yaml", "**/*.html"]
